--- a/solution.html
+++ b/solution.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> News </title>
+    <title> first HTML page </title>
 </head>
 <body>
     <h1>hello</h1>
+    <main>
+   My name is ravid barda
+   <img src="/success.jpg"
+    </main>
+    <footer> all right reserve to ravid barda </footer>
 </body>
 </html>
