--- a/solution.html
+++ b/solution.html
@@ -10,7 +10,7 @@
     <h1>hello</h1>
     <main>
    My name is ravid barda
-   <img src="/success.jpg"
+   <img src="/success.jpg">
     </main>
     <footer> all right reserve to ravid barda </footer>
 </body>
