--- a/solution.html
+++ b/solution.html
@@ -12,6 +12,6 @@
    My name is ravid barda
    <img src="/success.jpg">
     </main>
-    <footer> all right reserve to ravid barda </footer>
+    <footer> all right reserved to ravid barda </footer>
 </body>
 </html>
