--- a/homework.html
+++ b/homework.html
@@ -8,33 +8,41 @@
 </head>
     <header>
         <h1>
-            News
+              News
         </h1>
+        <nav>
+            <a href="#s">sport</a>
+            <a href="#t">tech</a>
+            <a href="#w">world</a>
+        </nav>
     </header>
 
     <body>
 
         <section>
-            <h2>sport</h2>
-            <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                  tempora fuga suscipit iure tempore doloremque ea.
+            <h2 id="s">sport</h2>
+            <article>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
             </article>
         </section>
 
         <section>
-            <h2>tech</h2>
-            <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                  tempora fuga suscipit iure tempore doloremque ea.
+            <h2 id="t">tech</h2>
+            <article>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
             </article>
         </section>
 
         <section>
-            <h2>world</h2>
-            <article>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                  tempora fuga suscipit iure tempore doloremque ea.
+            <h2 id="w">world</h2>
+            <article>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
             </article>
         </section>
 
