--- a/homework.html
+++ b/homework.html
@@ -24,6 +24,8 @@
             <article>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
             </article>
         </section>
