--- a/homework.html
+++ b/homework.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News today</title>
 </head>
-    <header>
+    <header id="h">
         <h1>
               News
         </h1>
@@ -80,7 +80,15 @@
         </section>
 
         <br>
+
+        <section>
+
+        <a href="#h">back to top</a>
         
+        </section>
+
+        <br>
+
     <footer> 
         @ all right resreved to ravid barda 
     </footer>
