--- a/homework.html
+++ b/homework.html
@@ -84,12 +84,14 @@
         <section>
 
         <a href="#h">back to top</a>
-        
+
         </section>
 
         <br>
 
     <footer> 
+        <a href="mailto:ravidbardamusic@gmail.com"> send me a massage</a>
+        <br>
         @ all right resreved to ravid barda 
     </footer>
 
