--- a/homework.html
+++ b/homework.html
@@ -13,6 +13,7 @@
         <nav>
             <a href="#s">sport</a>
             <a href="#t">tech</a>
+            <a href="#f">food</a>
             <a href="#w">world</a>
         </nav>
     </header>
@@ -24,17 +25,20 @@
             <article>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
+                 adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
+                 adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing
+                 elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
             </article>
@@ -56,6 +60,30 @@
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
+            </article>
+        </section>
+
+        <section>
+            <h2 id="f">food</h2>
+            <article>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
+                 adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
+                 adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
+                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
+                 adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.
             </article>
