--- a/homework.html
+++ b/homework.html
@@ -24,7 +24,7 @@
             <h2 id="s">sport</h2>
             <article>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
+                Quidem huty cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
                 tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
                  adipisicing elit. Sit incidunt quaerat enim a.
                 Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
