--- a/homework.html
+++ b/homework.html
@@ -1,128 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News today</title>
-</head>
-    <header id="h">
-        <h1>
-              News
-        </h1>
-        <nav>
-            <a href="#s">sport</a>
-            <a href="#t">tech</a>
-            <a href="#f">food</a>
-            <a href="#w">world</a>
-        </nav>
-    </header>
+  </head>
 
-    <body>
+  <header id="h">
+    <h1>News</h1>
+    <nav>
+      <a href="#s">sport</a>
+      <a href="#t">tech</a>
+      <a href="#f">food</a>
+      <a href="#w">world</a>
+      <a href="#b">blog</a>
+    </nav>
+  </header>
 
-        <section>
-            <h2 id="s">sport</h2>
-            <article>
-                Lorem, ipsum dolor gort sit amet consectetur horny adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem huty cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
-                 adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
-                 adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing
-                 elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-            </article>
-        </section>
+  <body>
+    <section>
+      <h2 id="s">sport</h2>
+      <article>
+        Lorem, ipsum dolor gort sit amet consectetur horny adipisicing elit. Sit
+        incidunt quaerat enim a. Quidem huty cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque ea.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque
+        ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit
+        incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea.
+      </article>
+    </section>
 
-        <section>
-            <h2 id="t">tech</h2>
-            <article>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-            </article>
-        </section>
+    <section>
+      <h2 id="t">tech</h2>
+      <article>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque ea.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea.
+      </article>
+    </section>
 
-        <section>
-            <h2 id="f">food</h2>
-            <article>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
-                 adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
-                 adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.Lorem, ipsum dolor sit amet consectetur
-                 adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-            </article>
-        </section>
+    <section>
+      <h2 id="f">food</h2>
+      <article>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque
+        ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit
+        incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque
+        ea.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit
+        incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea.
+      </article>
+    </section>
 
-        <section>
-            <h2 id="w">world</h2>
-            <article>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt quaerat enim a.
-                Quidem cupiditate architecto unde, quod necessitatibus deserunt ratione assumenda mollitia,
-                tempora fuga suscipit iure tempore doloremque ea.
-            </article>
-        </section>
+    <section>
+      <h2 id="w">world</h2>
+      <article>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+        Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
+        necessitatibus deserunt ratione assumenda mollitia, tempora fuga
+        suscipit iure tempore doloremque ea. Lorem, ipsum dolor sit amet
+        consectetur adipisicing elit. Sit incidunt quaerat enim a. Quidem
+        cupiditate architecto unde, quod necessitatibus deserunt ratione
+        assumenda mollitia, tempora fuga suscipit iure tempore doloremque ea.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit incidunt
+        quaerat enim a. Quidem cupiditate architecto unde, quod necessitatibus
+        deserunt ratione assumenda mollitia, tempora fuga suscipit iure tempore
+        doloremque ea.
+      </article>
+    </section>
 
-        <br>
+    <section>
+      <h2 id="b">blog</h2>
+      <article>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt,
+        temporibus quis eum voluptatibus tempora veniam esse, reprehenderit
+        optio qui corrupti atque sint dicta amet veritatis illum iusto ipsam
+        fugit officia. Reprehenderit itaque dolorum, minus expedita impedit
+        excepturi non animi aliquid rem blanditiis tempora assumenda a
+        molestiae! Voluptatibus ea velit, incidunt consectetur quidem rerum
+        aperiam exercitationem, nostrum, repellat recusandae ullam explicabo
+        illum unde repellendus reiciendis molestias cupiditate officia
+        doloremque blanditiis praesentium nobis nulla possimus quas accusamus?
+        Illum nam porro, omnis ipsam impedit illo soluta nobis ut voluptates
+        sint aliquid voluptatem molestiae consectetur vel recusandae sapiente
+        labore esse, adipisci nostrum laboriosam? Vel!
+      </article>
+    </section>
 
-        <section>
+    <br />
 
-        <a href="#h">back to top</a>
+    <section>
+      <a href="#h">back to top</a>
+    </section>
 
-        </section>
+    <br />
 
-        <br>
-
-    <footer> 
-        <a href="mailto:ravidbardamusic@gmail.com"> send me a massage</a>
-        <br>
-        @ all right resreved to ravid barda 
+    <footer>
+      <a href="mailto:ravidbardamusic@gmail.com"> send me a massage</a>
+      <br />
+      @ all right resreved to ravid barda
     </footer>
-
-    </body>
-
+  </body>
 </html>
