--- a/homework.html
+++ b/homework.html
@@ -65,7 +65,10 @@
         doloremque ea. Lorem, ipsum dolor sit amet consectetur adipisicing elit.
         Sit incidunt quaerat enim a. Quidem cupiditate architecto unde, quod
         necessitatibus deserunt ratione assumenda mollitia, tempora fuga
-        suscipit iure tempore doloremque ea.
+        suscipit iure tempore doloremque ea. Lorem ipsum dolor, sit amet
+        consectetur adipisicing elit. Consequuntur veniam dolorum quis sed
+        tenetur blanditiis repudiandae nulla, culpa aspernatur cum, praesentium
+        repellendus mollitia officia enim eveniet ab magnam ratione est?
       </article>
     </section>
 
@@ -145,7 +148,7 @@
     <footer>
       <a href="mailto:ravidbardamusic@gmail.com"> send me a massage</a>
       <br />
-      @ all right resreved to ravid barda
+      @ All right resreved to Ravid Barda
     </footer>
   </body>
 </html>
